elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/PCB_Configuration__c.object-meta.xml
<CustomObject>
    <label>Configurazione PCB</label>
    <pluralLabel>Configurazioni PCB</pluralLabel>
    <nameField>
        <displayFormat>PCB-{00000}</displayFormat>
        <label>Numero Configurazione</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>