elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Configurazioni PCB</relationshipLabel>
    <relationshipName>PCB_Configurations</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>