elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Aspect_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Aspect_Ratio__c</fullName>
    <label>Aspect Ratio</label>
    <description>Aspect ratio spessore/diametro foro</description>
    <inlineHelpText>Rapporto tra spessore PCB e diametro minimo foro (es. 8.00)</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>