elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Internal_Circuit_Code__c.field-meta.xml
<CustomField>
  <fullName>Internal_Circuit_Code__c</fullName>
  <label>Internal Circuit Code</label>
  <type>Text</type>
  <length>80</length>
</CustomField>