elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Materiale__c.field-meta.xml
<CustomField>
  <fullName>Materiale__c</fullName>
  <label>Materiale</label>
  <type>Picklist</type>
  <valueSet>
    <controllingField>Tipologia_Prodotto__c</controllingField>
    <valueSetDefinition>
      <value><fullName>FR-4 Standard</fullName><default>false</default><label>FR-4 Standard</label></value>
      <value><fullName>FR-4 High Tg</fullName><default>false</default><label>FR-4 High Tg</label></value>
      <value><fullName>Rogers</fullName><default>false</default><label>Rogers</label></value>
      <value><fullName>Alluminio (Metal Core)</fullName><default>false</default><label>Alluminio (Metal Core)</label></value>
      <value><fullName>CEM-1</fullName><default>false</default><label>CEM-1</label></value>
      <value><fullName>CEM-3</fullName><default>false</default><label>CEM-3</label></value>
      <value><fullName>Polyimide</fullName><default>false</default><label>Polyimide</label></value>
      <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>