elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Materiale_Custom_Value__c.field-meta.xml
<CustomField>
  <fullName>Materiale_Custom_Value__c</fullName>
  <label>Materiale Custom Value</label>
  <type>Text</type>
  <length>255</length>
</CustomField>