elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Pista_Minima__c.field-meta.xml
<CustomField>
    <fullName>Pista_Minima__c</fullName>
    <label>Pista Minima (mm)</label>
    <description>Pista minima richiesta in millimetri</description>
    <inlineHelpText>Specificare la pista minima in millimetri (es. 0.15)</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>3</scale>
</CustomField>