elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Silkscreen_Specifico__c.field-meta.xml
<CustomField>
  <fullName>Silkscreen_Specifico__c</fullName>
  <label>Silkscreen Specifico</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Bianco</fullName><default>false</default><label>Bianco</label></value>
      <value><fullName>Nero</fullName><default>false</default><label>Nero</label></value>
      <value><fullName>Giallo</fullName><default>false</default><label>Giallo</label></value>
      <value><fullName>Nessuno</fullName><default>false</default><label>Nessuno</label></value>
      <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>