elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Solder_Specifico__c.field-meta.xml
<CustomField>
  <fullName>Solder_Specifico__c</fullName>
  <label>Solder Specifico</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>Verde</fullName><default>false</default><label>Verde</label></value>
      <value><fullName>Nero</fullName><default>false</default><label>Nero</label></value>
      <value><fullName>Bianco</fullName><default>false</default><label>Bianco</label></value>
      <value><fullName>Rosso</fullName><default>false</default><label>Rosso</label></value>
      <value><fullName>Blu</fullName><default>false</default><label>Blu</label></value>
      <value><fullName>Giallo</fullName><default>false</default><label>Giallo</label></value>
      <value><fullName>Trasparente</fullName><default>false</default><label>Trasparente</label></value>
      <value><fullName>Nessuno</fullName><default>false</default><label>Nessuno</label></value>
      <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>