elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Spessore_Complessivo__c.field-meta.xml
<CustomField>
  <fullName>Spessore_Complessivo__c</fullName>
  <label>Spessore Complessivo</label>
  <type>Picklist</type>
  <valueSet>
    <controllingField>Materiale__c</controllingField>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>0.4 mm</fullName><default>false</default><label>0.4 mm</label></value>
      <value><fullName>0.6 mm</fullName><default>false</default><label>0.6 mm</label></value>
      <value><fullName>0.8 mm</fullName><default>false</default><label>0.8 mm</label></value>
      <value><fullName>1.0 mm</fullName><default>false</default><label>1.0 mm</label></value>
      <value><fullName>1.2 mm</fullName><default>false</default><label>1.2 mm</label></value>
      <value><fullName>1.6 mm</fullName><default>false</default><label>1.6 mm</label></value>
      <value><fullName>2.0 mm</fullName><default>false</default><label>2.0 mm</label></value>
      <value><fullName>2.4 mm</fullName><default>false</default><label>2.4 mm</label></value>
      <value><fullName>3.2 mm</fullName><default>false</default><label>3.2 mm</label></value>
      <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>