elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/fields/Spessore_Rame_Esterni__c.field-meta.xml
<CustomField>
  <fullName>Spessore_Rame_Esterni__c</fullName>
  <label>Spessore Rame Esterni</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>0.5 oz (18 µm)</fullName><default>false</default><label>0.5 oz (18 µm)</label></value>
      <value><fullName>1 oz (35 µm)</fullName><default>false</default><label>1 oz (35 µm)</label></value>
      <value><fullName>2 oz (70 µm)</fullName><default>false</default><label>2 oz (70 µm)</label></value>
      <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>