elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/validationRules/VR_PCB_01_Materiale_Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PCB_01_Materiale_Custom</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Materiale__c, &quot;Custom&quot;),
  ISBLANK(Materiale_Custom_Value__c)
)</errorConditionFormula>
    <errorMessage>Specificare il materiale custom quando Materiale = &apos;Custom&apos;</errorMessage>
    <errorDisplayField>Materiale_Custom_Value__c</errorDisplayField>
</ValidationRule>