elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/validationRules/VR_PCB_02_Spessore_Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PCB_02_Spessore_Custom</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Spessore_Complessivo__c, &quot;Custom&quot;),
  ISBLANK(Spessore_Custom_Value__c)
)</errorConditionFormula>
    <errorMessage>Specificare lo spessore custom quando Spessore = &apos;Custom&apos;</errorMessage>
    <errorDisplayField>Spessore_Custom_Value__c</errorDisplayField>
</ValidationRule>