elco-salesforce/force-app/main/default/objects/PCB_Configuration__c/validationRules/VR_PCB_03_Rame_Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PCB_03_Rame_Custom</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Spessore_Rame_Esterni__c, &quot;Custom&quot;),
  ISBLANK(Rame_Custom_Value__c)
)</errorConditionFormula>
    <errorMessage>Specificare lo spessore rame custom quando Rame = &apos;Custom&apos;</errorMessage>
    <errorDisplayField>Rame_Custom_Value__c</errorDisplayField>
</ValidationRule>